<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.UpdateAreaFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_enter_name"
        style="@style/text_size_style.text_input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/tv_enter_parent_id"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_enter_parent_id"
        style="@style/text_size_style.text_input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_parent_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_name"
        app:layout_constraintBottom_toTopOf="@+id/okBtn"/>

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Готово"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_parent_id" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pb_loading"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/loading"
        style="@style/cardview_text_style"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>