<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/csl_one_area"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/grey_light"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_one_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        style="@style/margins_for_card_style"
        android:outlineAmbientShadowColor="@color/teal_700"
        android:outlineSpotShadowColor="@color/teal_700"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_one_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/tv_area_subregion_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/vertical_margin"
                android:textSize="20sp"
                style="@style/cardview_text_style"
                android:text="@string/area_name"
                android:fontFamily="sans-serif-black"/>

            <TextView
                android:id="@+id/tv_area_subregion_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/cardview_text_style"
                app:layout_constraintTop_toBottomOf="@+id/tv_one_area"
                android:text="@string/subregion_amount"
                android:textStyle="italic"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_one_area_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/cardview_text_style"
                app:layout_constraintTop_toBottomOf="@+id/tv_area_subregion_amount"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/id_of_area"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>